--- a/dropbox-backend/src/main/resources/application.yaml
+++ b/dropbox-backend/src/main/resources/application.yaml
@@ -9,9 +9,22 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+
+# src/main/resources/application.yml
+file:
+  upload-dir: /Users/pawandeep.singh/Desktop/personal_projects/dropbox/dropbox-backend/uploaded_files
+  allowed-extensions:
+    - txt
+    - jpg
+    - png
+    - json
+
+
+logging:
+  level:
+    root: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] - %msg%n"
+
 
 
